# Fourier-Diodes

1.Hardware/Control-Board/: Control-Board.kicad_prl  Control-Board.kicad_pro  Control-Board.kicad_sch
3.Software/: CMakeLists.txt  audio.cpp  audio.hpp  audio_widget.cpp  audio_widget.hpp  canvas_widget.cpp  canvas_widget.hpp  color_palette.cpp  color_palette.hpp  fourier_colors.cpp  fourier_colors.hpp  main.cpp  main_window.cpp  main_window.hpp  pattern_list.cpp  pattern_list.hpp
